fix: replace placeholder message with i18n key in noderole.js

--- a/neo3-gui/neo3-gui/ClientApp/public/locales/en/translation.json
+++ b/neo3-gui/neo3-gui/ClientApp/public/locales/en/translation.json
@@ -41,6 +41,7 @@
     "more": "More",
     "need address": "Address is required",
     "select address": "Select address",
+    "node role warning": "Query nodes by their designated role in the network",
     "select all": "Select all",
     "signature": "Signature",
     "signature result": "Signature result",
