refactor(v4): i18n完善、删除重复文件、ESLint修复
- 删除未使用的 src/core/dataConverter.js (与 Common/dataConverter.js 重复)
- 删除未使用的 chainSearch.js (已被 UnifiedSearch 替代)
- 添加 i18n 键: common.query fail, datatrans.illegal ascii
- 修复 10 处硬编码文本，改用 i18n
- 修复 ESLint 警告: 移除未使用的参数和导入
- contract.js 添加缺失的 message 导入

--- a/neo3-gui/neo3-gui/ClientApp/public/locales/en/translation.json
+++ b/neo3-gui/neo3-gui/ClientApp/public/locales/en/translation.json
@@ -140,6 +140,7 @@
     "copied": "Copied",
     "count": "Count",
     "load more": "Load More",
+    "query fail": "Query failed",
     "size": "Size",
     "syncing": "Syncing",
     "txsyncing": "Tx Syncing",
@@ -176,6 +177,7 @@
     "upgrade contract": "Update Contract"
   },
   "datatrans": {
+    "illegal ascii": "Illegal Format ASCII Code!",
     "input error": "Format is wrong, please check and enter again!"
   },
   "error code": "Error Code",
